fix bootstrap loading width when it's wrapped into a flex container

--- a/dapps/ui.libs/src/style/dapp-wrapper.scss
+++ b/dapps/ui.libs/src/style/dapp-wrapper.scss
@@ -37,7 +37,7 @@ $sidebar-small-width: $navbar-height;
   height: 100%;
 
   .navbar {
-    z-index: 50;
+    z-index: 1030;
 
     display: flex;
     flex-wrap: nowrap;
@@ -112,7 +112,7 @@ $sidebar-small-width: $navbar-height;
     height: 100%;
 
     .dapp-wrapper-sidebar {
-      z-index: 25;
+      z-index: 1028;
 
       width: $sidebar-width;
       min-width: $sidebar-width;
@@ -335,7 +335,7 @@ $sidebar-small-width: $navbar-height;
 
         .dapp-wrapper-sidebar-background {
           position: fixed;
-          z-index: 20;
+          z-index: 1017;
           top: 0;
           right: 0;
           bottom: 0;
@@ -390,7 +390,7 @@ $sidebar-small-width: $navbar-height;
 
       .dapp-wrapper-sidebar-2 {
         position: fixed;
-        z-index: 40;
+        z-index: 1029;
         top: 130px;
         left: -100%;
 
